--- a/Joe.html
+++ b/Joe.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 <html lang="en">
 <head>
+  /*code edited in comments form*/
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Joe Debrah</title>
 <link rel="stylesheet" href="css/style_option1.css"/>
