--- a/try.html
+++ b/try.html
@@ -1,1 +1,1 @@
-<!This is just to test how pushing a specific file works.-->
+<! minimal change This is just to test how pushing a specific file works.-->
